--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
 
 <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-        <a class="navbar-brand" href="file:///home/swaraj/Public/labnetwork/home.html" onclick="check_link(this)">Book
+        <a class="navbar-brand" href="file:home.html" onclick="check_link(this)">Book
             Mart</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -25,22 +25,22 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav text-center">
                 <li class="nav-item">
-                    <a class="nav-link" href="file:///home/swaraj/Public/labnetwork/register.html" onclick="check_link(this)">Registration Form</a>
+                    <a class="nav-link" href="register.html" onclick="check_link(this)">Registration Form</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="file:///home/swaraj/Public/labnetwork/profile.html" onclick="check_link(this)">User Profile</a>
+                    <a class="nav-link" href="profile.html" onclick="check_link(this)">User Profile</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="file:///home/swaraj/Public/labnetwork/login.html" onclick="check_link(this)">User Login</a>
+                    <a class="nav-link" href="login.html" onclick="check_link(this)">User Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="file:///home/swaraj/Public/labnetwork/catalog.html" onclick="check_link(this)">Books Catalog</a>
+                    <a class="nav-link" href="catalog.html" onclick="check_link(this)">Books Catalog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="file:///home/swaraj/Public/labnetwork/cart.html" onclick="check_link(this)">Cart</a>
+                    <a class="nav-link" href="cart.html" onclick="check_link(this)">Cart</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="file:///home/swaraj/Public/labnetwork/pay.html" onclick="check_link(this)">Payment</a>
+                    <a class="nav-link" href="pay.html" onclick="check_link(this)">Payment</a>
                 </li>
             </ul>
         </div>
